--- a/Pipfile
+++ b/Pipfile
@@ -9,17 +9,21 @@ pytest-cov = ">=2.6.1"
 pytest-html = ">=1.20.0"
 pytest-xdist = ">=1.30.0"
 pytest-sugar = ">=0.9.2"
-
-[packages]
-websockets = ">=9.2.0"
 ipykernel = ">=5.3.4"
 ipython = ">=5.5.0"
 jupyter = ">=1.0.0"
 notebook = ">=6.2.0"
+nbconvert = "==5.6.1"
 jupyter_contrib_nbextensions = ">=0.5.0"
 jupyter_nbextensions_configurator = ">=0.4.1"
 jupyterthemes = ">=0.20.0"
 
+[packages]
+ray = ">=1.3.0"
+dill = ">=0.3.3"
+websockets = ">=9.0.2"
+nest-asyncio = ">=1.5.1"
+
 [requires]
-python_version = "3.9.4"
+python_version = "3.8.9"
 
