--- a/Pipfile
+++ b/Pipfile
@@ -20,7 +20,7 @@ jupyterthemes = ">=0.20.0"
 
 [packages]
 ray = ">=1.3.0"
-dill = ">=0.3.3"
+cloudpickle = ">=1.6.0"
 websockets = ">=9.0.2"
 nest-asyncio = ">=1.5.1"
 
