--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ pytest-cov = ">=2.6.1"
 pytest-html = ">=1.20.0"
 pytest-xdist = ">=1.30.0"
 pytest-sugar = ">=0.9.2"
+pytest-asyncio = ">=0.15.1"
 ipykernel = ">=5.3.4"
 ipython = ">=5.5.0"
 jupyter = ">=1.0.0"
